@@ -1,5 +1,4 @@
 simplejson
-psycopg2
 
 # Used for testing
 coverage
