@@ -1,1 +1,2 @@
 from pubsubpull.tests.test_config import *
+from pubsubpull.tests.test_pull import *
