@@ -1,1 +1,4 @@
 https://www.djangoproject.com/download/1.0.4/tarball/
+unittest2
+# 2.4.2 is not compatible with Django 1.0
+psycopg2 < 2.4.2
