@@ -1,3 +1,3 @@
 django < 1.8
-
+psycopg2
 django-nose
