@@ -1,3 +1,6 @@
+2015-05-07  Kirit Sælensminde  <kirit@felspar.com>
+ Get the Django 1.0 tests to run using Postgres.
+
 2015-05-05  Kirit Sælensminde  <kirit@felspar.com>
  Added migrations for South and Django 1.7
  Added initial version of pull capability
